--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -328,11 +328,51 @@ footer span {
     background-color: transparent;
     backdrop-filter: blur(5px);
     display: flex;
-    flex-direction: colums;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 .login-header {
     position: absolute;
     top:0;
+}
+
+.form-login-container {
+    width: 33.333%;
+    min-height: 465px;
+    background-color: #121223;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+    padding: 24px;
+}
+.login-title {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin: 30px;
+}
+.login-form-label {
+    color: #ffffff;
+    font-size: 15px;
+    width: 100% !important;
+    margin: 4px;
+    display: block;
+    margin-bottom: 32px;
+    margin-top: 32px;
+}
+.form-input {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #ffffff !important;
+    background-color: transparent !important;
+    padding: 2px;
+    color: #ffffff;
+}
+.login-form {
+    width: 100%;
+    background-color: transparent;   
 }
