--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,7 +24,7 @@ header {
 }
 
 header a {
-    color:  #ffffff;
+    color: #ffffff;
 }
 
 .descricao {
@@ -59,7 +59,7 @@ header a {
     font-size: 34px;
 }
 
-.esquerda-descricao a{
+.esquerda-descricao a {
     color: #ffffff;
 }
 
@@ -206,7 +206,7 @@ header a {
 }
 
 .titulo-anunciante {
-    margin:  0 0 20px 0;
+    margin: 0 0 20px 0;
     text-align: center;
 }
 
@@ -327,14 +327,15 @@ footer span {
     position: absolute;
     background-color: transparent;
     backdrop-filter: blur(5px);
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 .login-header {
     position: absolute;
-    top:0;
+    top: 0;
 }
 
 .form-login-container {
@@ -345,16 +346,32 @@ footer span {
     flex-direction: column;
     align-items: center;
     border-radius: 15px;
-    padding: 24px;
+    padding: 12px;
+    border: 1px solid #7F7FFC;
 }
+
+.form-register-container {
+    width: 33.333%;
+    max-height: 700px;
+    background-color: #121223;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+    padding: 12px;
+    border: 1px solid #7F7FFC;
+    display: block;
+}
+
 .login-title {
     width: 100%;
     height: auto;
     text-align: center;
     color: #ffffff;
     text-transform: uppercase;
-    margin: 30px;
+    margin-bottom: 30px;
 }
+
 .login-form-label {
     color: #ffffff;
     font-size: 15px;
@@ -362,8 +379,9 @@ footer span {
     margin: 4px;
     display: block;
     margin-bottom: 32px;
-    margin-top: 32px;
+    margin-top: 24px;
 }
+
 .form-input {
     width: 100%;
     border: none;
@@ -372,7 +390,63 @@ footer span {
     padding: 2px;
     color: #ffffff;
 }
+
 .login-form {
     width: 100%;
-    background-color: transparent;   
+    background-color: transparent;
+}
+
+.button-container {
+    width: 100%;
+    padding: 8px;
+    margin-top: 64px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-button {
+    padding: 10px;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
+    border-radius: 15px;
+    color: #3939A4;
+    font-size: 15px;
+}
+
+.register-question {
+    width: 100%;
+    color: #ffffff !important;
+    font-size: 12px;
+    text-align: center;
+    margin-top: 4px;
+}
+
+.register-user {
+    color: #7F7FFC;
+    cursor: pointer;
+}
+
+.no-script {
+    color: #ffffff;
+    font-size: 12px;
+    text-align: center;
+}
+
+.close-blur {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border: 1px solid #121223;
+    background-color: #ffffff;
+    color: #121223;
+    border-radius: 100%;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer
 }
