--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Montserrat';
+    src: url("../fonts/Montserrat-Medium.ttf")
+    format("ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
