--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,7 +24,7 @@ header {
 }
 
 header a {
-    color:  #ffffff;
+    color: #ffffff;
 }
 
 .descricao {
@@ -59,7 +59,7 @@ header a {
     font-size: 2.125rem;
 }
 
-.esquerda-descricao a{
+.esquerda-descricao a {
     color: #ffffff;
 }
 
@@ -87,7 +87,7 @@ header a {
 
 #ver-mais-botao {
     height: 3rem;
-    width: 0.938rem;
+    width: 9.688rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -206,7 +206,7 @@ header a {
 }
 
 .titulo-anunciante {
-    margin:  0 0 1.25rem 0;
+    margin: 0 0 1.25rem 0;
     text-align: center;
 }
 
@@ -322,8 +322,8 @@ footer span {
 
 .blur-background-form {
     z-index: 200;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: absolute;
     background-color: transparent;
     backdrop-filter: blur(0.313rem);
@@ -332,9 +332,10 @@ footer span {
     align-items: center;
     justify-content: center;
 }
+
 .login-header {
     position: absolute;
-    top:0;
+    top: 0;
 }
 
 .form-login-container {
@@ -346,17 +347,20 @@ footer span {
     align-items: center;
     border-radius: 0.938rem;
     padding: 1.5rem;
+    border: 1px solid #7F7FFC;
 }
 
 .form-register-container::-webkit-scrollbar {
-    width: 12px;
+    width: 0.5rem;
     border: 1px solid #090915;
     background-color: #ffffff;
-    border-radius: 4px;
-    padding: 2px;
+    border-radius: 0.25rem;
+    padding: 0.25rem;
+    margin: 0.25rem;
 }
+
 .form-register-container {
-    width: 33.333%;
+    width: 50%;
     max-height: 700px;
     background-color: #121223;
     display: flex;
@@ -367,16 +371,20 @@ footer span {
     border: 1px solid #7F7FFC;
     display: block;
     overflow-y: auto;
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
+
 .login-title {
-    width: 100%;
+    width: 80%;
     height: auto;
     text-align: center;
     color: #ffffff;
     text-transform: uppercase;
     margin: 1.875rem;
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
+
 .login-form-label {
     color: #ffffff;
     font-size: 0.938rem;
@@ -386,6 +394,7 @@ footer span {
     margin-bottom: 2rem;
     margin-top: 2rem;
 }
+
 .form-input {
     width: 100%;
     border: none;
@@ -394,9 +403,10 @@ footer span {
     padding: 0.125rem;
     color: #ffffff;
 }
+
 .login-form {
     width: 100%;
-    background-color: transparent;   
+    background-color: transparent;
 }
 
 .button-container {
@@ -465,4 +475,19 @@ li[class^="parsley-"] {
     font-size: 12px !important;
     color: indianred !important;
     text-align: center;
+}
+
+.logout {
+    width: 2rem;
+    height: 2rem;
+}
+
+.logout-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    padding: 0.24rem;
+    font-size: 0.5rem;
+    cursor: pointer;
 }
